# cross-system-correlator

./: .dockerignore  .gitignore  Dockerfile  README.md  chains.json  demo-output.json  demo-output.txt  pyproject.toml
.github/workflows/: ci.yml
correlator/: __init__.py  cli.py  correlate.py  models.py  parsers.py  scoring.py
