[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "cross-system-correlator"
version = "0.1.0"
requires-python = ">=3.10"
description = "Correlate API/DB/Storage logs into end-to-end event chains"
readme = "README.md"

[project.scripts]
correlator = "correlator.cli:main"